--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_DOMAIN=replace with the base domain for the associated workers
-WORKERS_ARRAY=replace with comma separated list of your Worker names
+BASE_DOMAIN=willsmithee.com
+WORKERS_ARRAY=codeclub-1,codeclub-2,codeclub-3
